# llms

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
soe-llms/: Cargo.toml  README.md
soe-llms/examples/: all.rs  hello.rs
soe-llms/src/: lib.rs
soe-llms/src/anthropic/: mod.rs
soe-llms/src/google/: mod.rs
soe-llms/src/llms/: error.rs  mod.rs
soe-llms/src/mistral/: mod.rs
soe-llms/src/openai/: mod.rs
soe-llms/src/openrouter/: mod.rs
soe-llms/src/publicai/: mod.rs
soe-llms/src/utils/: mod.rs  sse.rs
soe-llms/src/xai/: mod.rs
