[package]
name = "soe-llms"
version = "0.0.1"
edition = "2024"

[dependencies]
bytes = "1.11.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-util = "0.7.17"
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
