[package]
name = "soe-llms"
description = "An opiniated library for interacting with LLMS"
version = "0.0.1"
authors = ["Sören Meier <soeren@meierlabs.ch>"]
repository = "https://github.com/soerenmeier/llms"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["openai", "llms", "gemini", "claude", "mistral"]
categories = ["api-bindings", "web-programming", "asynchronous"]

[dependencies]
bytes = "1.11.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-util = "0.7.17"
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
